# project-4

./: .gitignore  README.md  create_build.sh  structure.md
src/: CMakeLists.txt  GenerateProtos.cmake  file_shard.h  mapreduce.cc  mapreduce_impl.cc  mapreduce_impl.h  mapreduce_spec.h  master.h  masterworker.proto  mr_task_factory.cc  mr_tasks.h  run_worker.cc  worker.h
test/: main.cc  user_tasks.cc
